change build configuration